@@ -58,7 +58,7 @@
     );
     "PRINCIPAL_CLASS" = NSApplication;
     "PROJECT_AUTHORS" = (
-	"Riccardo Mottola (rmottola@users.sf.net)"
+	"Riccardo Mottola (rm@gnu.org)"
     );
     "PROJECT_COPYRIGHT" = "Copyright (C) 2005-2015";
     "PROJECT_COPYRIGHT_DESC" = "Released under GPL";
