@@ -5,7 +5,7 @@
     ApplicationName = batmon;
     ApplicationRelease = "0.8";
     Authors = (
-	"Riccardo Mottola (rmottola@users.sf.net)"
+	"Riccardo Mottola (rm@gnu.org)"
     );
     Copyright = "Copyright (C) 2005-2015";
     CopyrightDescription = "Released under GPL";
